--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
-<body>
 
-    <h1>Main Page WIP</h1>
-    
+<body>
+    <header>
+        <nav>
+            <div class="logo">
+                <h1>Genti</h1>
+            </div>
+            <div class="navegacion">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Acerca de mi</a></li>
+                    <li><a href="pages/paginas.html">Paginas</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+
+        <h1>Main Page WIP</h1>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
