Organizacion, footer y colores

--- a/pages/paginas.html
+++ b/pages/paginas.html
@@ -5,76 +5,165 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/paginas/paginas.css">
+    <link rel="stylesheet" href="../css/paginas/contenedores.css">
     <title>Document</title>
 </head>
 
 <body>
 
     <header>
+        <div class="logo">
+            <img src="../img/logo.png" alt="">
+        </div>
         <nav>
-            <div class="logo">
-                <h1>Genti</h1>
-            </div>
-            <div class="navegacion">
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="">Acerca de mi</a></li>
-                    <li><a href="">Paginas</a></li>
-                </ul>
-            </div>
+            <ul>
+                <a href="../index.html"><li>Home</li></a>
+                <a href=""><li>Acerca de mi</li></a>
+                <a href=""><li>Paginas</li></a>
+            </ul>
         </nav>
-    </header>
+</header>
 
     <main>
-        <ul class="contenedores">
-            <li>
-                <a href=""><img src="../img/paginas/one.png" alt="">
+
+            <ul class="contenedores">
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/one.png" alt="">
+                    </div>
+
                     <h2>ONE</h2>
                     <p>Paginas desarrolladas durante la cursada en el programa Oracle Next Education.</p>
-                </a>
-            </li>
 
-            <li>
-                <a href=""><img src="../img/paginas/one.png" alt=""></a>
-                <h2>Desarrollo Personal</h2>
-                <p>Paginas desarrolladas para practicar y poner a prueba mis habilidades.</p>
-            </li>
+                    </a>
+                </li>
 
-            <li>
-                <a href=""><img src="../img/paginas/one.png" alt=""></a>
-                <h2>Desarrollo Personal</h2>
-                <p>Paginas desarrolladas para practicar y poner a prueba mis habilidades</p>
-            </li>
+                <li>
+                    <div>
+                        <a href="paginas/desarrollo_personal.html"><img src="../img/paginas/dev.png" alt="">
+                    </div>
+                    <h2>Desarrollo Personal</h2>
+                    <p>Paginas desarrolladas para practicar y poner a prueba mis habilidades.</p>
+                    </a>
+                </li>
 
-            <li>
-                <a href=""><img src="../img/paginas/one.png" alt=""></a>
-                <h2>Desarrollo Personal</h2>
-                <p>Paginas desarrolladas para practicar y poner a prueba mis habilidades</p>
-            </li>
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/unlam.png" alt="">
+                    </div>
+                    <h2>UNLaM</h2>
+                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
+                        Desarrollo Web en la UNLaM.</p>
+                    </a>
+                </li>
 
-            <li>
-                <a href=""><img src="../img/paginas/one.png" alt=""></a>
-                <h2>Desarrollo Personal</h2>
-                <p>Paginas desarrolladas para practicar y poner a prueba mis habilidades</p>
-            </li>
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/unlam.png" alt="">
+                    </div>
+                    <h2>UNLaM</h2>
+                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
+                        Desarrollo Web en la UNLaM.</p>
+                    </a>
+                </li>
 
-            <li>
-                <a href=""><img src="../img/paginas/one.png" alt=""></a>
-                <h2>Desarrollo Personal</h2>
-                <p>Paginas desarrolladas para practicar y poner a prueba mis habilidades</p>
-            </li>
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/unlam.png" alt="">
+                    </div>
+                    <h2>UNLaM</h2>
+                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
+                        Desarrollo Web en la UNLaM.</p>
+                    </a>
+                </li>
 
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/unlam.png" alt="">
+                    </div>
+                    <h2>UNLaM</h2>
+                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
+                        Desarrollo Web en la UNLaM.</p>
+                    </a>
+                </li>
 
-        </ul>
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/unlam.png" alt="">
+                    </div>
+                    <h2>UNLaM</h2>
+                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
+                        Desarrollo Web en la UNLaM.</p>
+                    </a>
+                </li>
+
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/unlam.png" alt="">
+                    </div>
+                    <h2>UNLaM</h2>
+                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
+                        Desarrollo Web en la UNLaM.</p>
+                    </a>
+                </li>
+
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/unlam.png" alt="">
+                    </div>
+                    <h2>UNLaM</h2>
+                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
+                        Desarrollo Web en la UNLaM.</p>
+                    </a>
+                </li>
+
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/unlam.png" alt="">
+                    </div>
+                    <h2>UNLaM</h2>
+                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
+                        Desarrollo Web en la UNLaM.</p>
+                    </a>
+                </li>
+
+                <li>
+                    <div>
+                        <a href=""><img src="../img/paginas/unlam.png" alt="">
+                    </div>
+                    <h2>UNLaM</h2>
+                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
+                        Desarrollo Web en la UNLaM.</p>
+                    </a>
+                </li>
+            </ul>
     </main>
 
     <footer>
+        <div>
+            <img src="/img/logo.png" alt="">
+        </div>
+        <div>
+            <h3>Acerca de</h3>
+            <ul class="foot-about">
+                <li><a href="https://www.unlam.edu.ar">UNLaM</a></li>
+                <li><a href="https://www.oracle.com/ar/education/oracle-next-education/">ONE</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>Redes</h3>
+            <ul class="icon">
+                <li><a href="https://www.instagram.com/el_genti_/"><img src="/img/ico/instagram.svg" alt=""></a></li>
+                <li><a href="https://github.com/Genti13"><img src="/img/ico/github.svg" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/gentile-alan/"><img src="/img/ico/linkedin.svg" alt=""></a></li>
+            </ul>
+        </div>
 
+</footer>
 
-    </footer>
 </body>
 
 </html>
