--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
@@ -12,27 +15,47 @@
 
 <body>
     <header>
+        <div class="logo">
+            <img src="img/logo.png" alt="">
+        </div>
         <nav>
-            <div class="logo">
-                <h1>Genti</h1>
-            </div>
-            <div class="navegacion">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Acerca de mi</a></li>
-                    <li><a href="pages/paginas.html">Paginas</a></li>
-                </ul>
-            </div>
+            <ul>
+                <a href="">
+                    <li>Home</li>
+                </a>
+                <a href="">
+                    <li>Acerca de mi</li>
+                </a>
+                <a href="pages/paginas.html">
+                    <li>Paginas</li>
+                </a>
+            </ul>
         </nav>
     </header>
 
     <main>
 
-        <h1>Main Page WIP</h1>
-
     </main>
 
     <footer>
+            <div>
+                <img src="/img/logo.png" alt="">
+            </div>
+            <div>
+                <h3>Acerca de</h3>
+                <ul class="foot-about">
+                    <li><a href="https://www.unlam.edu.ar">UNLaM</a></li>
+                    <li><a href="https://www.oracle.com/ar/education/oracle-next-education/">ONE</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3>Redes</h3>
+                <ul class="icon">
+                    <li><a href="https://www.instagram.com/el_genti_/"><img src="/img/ico/instagram.svg" alt=""></a></li>
+                    <li><a href="https://github.com/Genti13"><img src="/img/ico/github.svg" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/gentile-alan/"><img src="/img/ico/linkedin.svg" alt=""></a></li>
+                </ul>
+            </div>
 
     </footer>
 
