Imagnes, pagina nueva

--- a/pages/paginas/desarrollo_personal.html
+++ b/pages/paginas/desarrollo_personal.html
@@ -19,9 +19,15 @@
         </div>
         <nav>
             <ul>
-                <a href="../../index.html"><li>Home</li></a>
-                <a href=""><li>Acerca de mi</li></a>
-                <a href="../paginas.html"><li>Paginas</li></a>
+                <a href="../../index.html">
+                    <li>Home</li>
+                </a>
+                <a href="">
+                    <li>Acerca de mi</li>
+                </a>
+                <a href="../paginas.html">
+                    <li>Paginas</li>
+                </a>
             </ul>
         </nav>
     </header>
@@ -32,20 +38,20 @@
                 <li>
                     <div>
                         <a href="https://genti13.github.io/Primera_Pagina_Web/"><img
-                                src="../../img/paginas/desarrollo_personal/desarrollo_personal.png" alt="">
+                                src="../../img/paginas/desarrollo_personal/primer_pagina.png" alt="">
                     </div>
-                    <h2>Prismer Pagina</h2>
+                    <h2>Primer Pagina</h2>
                     <p>Primer Pagina que desarrolle aprendiendo de tutoriales y cursos en youtube.</p>
                     </a>
                 </li>
 
                 <li>
                     <div>
-                        <a href="https://genti13.github.io/Primera_Pagina_Web/"><img
-                                src="../../img/paginas/desarrollo_personal/desarrollo_personal.png" alt="">
+                        <a href="https://genti13.github.io/Primer-Formulario-De-Registro/"><img
+                                src="../../img/paginas/desarrollo_personal/primer_registro.png" alt="">
                     </div>
-                    <h2>Prismer Pagina</h2>
-                    <p>Primer Pagina que desarrolle aprendiendo de tutoriales y cursos en youtube.</p>
+                    <h2>Pagina de Registro</h2>
+                    <p>Primer Pagina de Registro que desarrolle aprendiendo de tutoriales y cursos en youtube.</p>
                     </a>
                 </li>
 
@@ -69,11 +75,12 @@
             <ul class="icon">
                 <li><a href="https://www.instagram.com/el_genti_/"><img src="/img/ico/instagram.svg" alt=""></a></li>
                 <li><a href="https://github.com/Genti13"><img src="/img/ico/github.svg" alt=""></a></li>
-                <li><a href="https://www.linkedin.com/in/gentile-alan/"><img src="/img/ico/linkedin.svg" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/gentile-alan/"><img src="/img/ico/linkedin.svg" alt=""></a>
+                </li>
             </ul>
         </div>
 
-</footer>
+    </footer>
 
 
 </body>
