--- a/pages/paginas.html
+++ b/pages/paginas.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/footer-header.css">
     <link rel="stylesheet" href="../css/paginas/contenedores.css">
     <title>Document</title>
 </head>
@@ -20,24 +20,28 @@
         </div>
         <nav>
             <ul>
-                <a href="../index.html"><li>Home</li></a>
-                <a href=""><li>Acerca de mi</li></a>
-                <a href=""><li>Paginas</li></a>
+                <a href="../index.html">
+                    <li>Home</li>
+                </a>
+                <a href="">
+                    <li>Acerca de mi</li>
+                </a>
+                <a href="">
+                    <li>Paginas</li>
+                </a>
             </ul>
         </nav>
-</header>
+    </header>
 
     <main>
-
+        <section>
             <ul class="contenedores">
                 <li>
                     <div>
                         <a href=""><img src="../img/paginas/one.png" alt="">
                     </div>
-
                     <h2>ONE</h2>
                     <p>Paginas desarrolladas durante la cursada en el programa Oracle Next Education.</p>
-
                     </a>
                 </li>
 
@@ -59,87 +63,8 @@
                         Desarrollo Web en la UNLaM.</p>
                     </a>
                 </li>
-
-                <li>
-                    <div>
-                        <a href=""><img src="../img/paginas/unlam.png" alt="">
-                    </div>
-                    <h2>UNLaM</h2>
-                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
-                        Desarrollo Web en la UNLaM.</p>
-                    </a>
-                </li>
-
-                <li>
-                    <div>
-                        <a href=""><img src="../img/paginas/unlam.png" alt="">
-                    </div>
-                    <h2>UNLaM</h2>
-                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
-                        Desarrollo Web en la UNLaM.</p>
-                    </a>
-                </li>
-
-                <li>
-                    <div>
-                        <a href=""><img src="../img/paginas/unlam.png" alt="">
-                    </div>
-                    <h2>UNLaM</h2>
-                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
-                        Desarrollo Web en la UNLaM.</p>
-                    </a>
-                </li>
-
-                <li>
-                    <div>
-                        <a href=""><img src="../img/paginas/unlam.png" alt="">
-                    </div>
-                    <h2>UNLaM</h2>
-                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
-                        Desarrollo Web en la UNLaM.</p>
-                    </a>
-                </li>
-
-                <li>
-                    <div>
-                        <a href=""><img src="../img/paginas/unlam.png" alt="">
-                    </div>
-                    <h2>UNLaM</h2>
-                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
-                        Desarrollo Web en la UNLaM.</p>
-                    </a>
-                </li>
-
-                <li>
-                    <div>
-                        <a href=""><img src="../img/paginas/unlam.png" alt="">
-                    </div>
-                    <h2>UNLaM</h2>
-                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
-                        Desarrollo Web en la UNLaM.</p>
-                    </a>
-                </li>
-
-                <li>
-                    <div>
-                        <a href=""><img src="../img/paginas/unlam.png" alt="">
-                    </div>
-                    <h2>UNLaM</h2>
-                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
-                        Desarrollo Web en la UNLaM.</p>
-                    </a>
-                </li>
-
-                <li>
-                    <div>
-                        <a href=""><img src="../img/paginas/unlam.png" alt="">
-                    </div>
-                    <h2>UNLaM</h2>
-                    <p>Paginas desarrolladas durante las distintas cursadas en la carrera de Tecnicatura en
-                        Desarrollo Web en la UNLaM.</p>
-                    </a>
-                </li>
             </ul>
+        </section>
     </main>
 
     <footer>
@@ -158,11 +83,12 @@
             <ul class="icon">
                 <li><a href="https://www.instagram.com/el_genti_/"><img src="/img/ico/instagram.svg" alt=""></a></li>
                 <li><a href="https://github.com/Genti13"><img src="/img/ico/github.svg" alt=""></a></li>
-                <li><a href="https://www.linkedin.com/in/gentile-alan/"><img src="/img/ico/linkedin.svg" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/gentile-alan/"><img src="/img/ico/linkedin.svg" alt=""></a>
+                </li>
             </ul>
         </div>
 
-</footer>
+    </footer>
 
 </body>
 
