--- a/pages/paginas/desarrollo_personal.html
+++ b/pages/paginas/desarrollo_personal.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="../../css/index.css">
+    <link rel="stylesheet" href="../../css/footer-header.css">
     <link rel="stylesheet" href="../../css/paginas/contenedores.css">
     <title>Document</title>
 </head>
@@ -42,6 +42,16 @@
                     </div>
                     <h2>Primer Pagina</h2>
                     <p>Primer Pagina que desarrolle aprendiendo de tutoriales y cursos en youtube.</p>
+                    </a>
+                </li>
+
+                <li>
+                    <div>
+                        <a href="https://genti13.github.io/Primer-Formulario-De-Registro/"><img
+                                src="../../img/paginas/desarrollo_personal/primer_registro.png" alt="">
+                    </div>
+                    <h2>Pagina de Registro</h2>
+                    <p>Primer Pagina de Registro que desarrolle aprendiendo de tutoriales y cursos en youtube.</p>
                     </a>
                 </li>
 
